--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -27,8 +27,12 @@
     <title>React App</title>
   </head>
   <body>
+    <header>
+      <h1 id="title">Tic Tac Toe</h1>
+    </header>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
